# Multimodal-AI-Platform

./: README.md  pyproject.toml  requirements.txt
configs/: caption_qlora.yaml  vqa_qlora.yaml
data/: manifest.yaml
docs/: architecture.md  runbook.md
docs/adr/: 001-shared-vlm-lora.md  003-vector-store-qdrant.md  006-monorepo-uv.md
frontend/streamlit_app/: api_client.py  app.py
multimodal-platform/: Makefile  docker-compose.yml
multimodal-platform/configs/: baseline_vit.yaml  serving.yaml
multimodal-platform/data/scripts/: download.py
multimodal-platform/docs/: design.md
multimodal-platform/docs/adr/: 002-embeddings-siglip2.md  004-ocr-model.md  005-serving-vllm.md
multimodal-platform/docs/model-cards/: TEMPLATE.md
multimodal-platform/frontend/streamlit_app/: Dockerfile  requirements.txt
multimodal-platform/monitoring/: prometheus.yml
multimodal-platform/monitoring/grafana/dashboards/: platform.json
multimodal-platform/notebooks/: README.md
multimodal-platform/tests/integration/: smoke.py
multimodal-platform/tests/unit/: test_images.py  test_question_classifier.py
tests/unit/: test_retrieval_metrics.py  test_schemas.py  test_vqa_metric.py
